correct overflow

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -56,3 +56,10 @@ H1 { text-align: center }
 .page-footer{
     background-color: #6f4e37;
 }
+
+/*  OVERFLOW CORRECTION */
+
+
+.row{
+  overflow: hidden;
+}
